create an example of Design of Experiment workflow and moving rsplib towards rc 1

--- a/src/NotebookRSPLab.ipynb
+++ b/src/NotebookRSPLab.ipynb
@@ -2,7 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import docker, json, os\n",
+    "import urllib.request\n",
+    "from RSPClient import RSPClient\n",
+    "\n",
+    "client = docker.DockerClient(base_url='http://rspcollector.westeurope.cloudapp.azure.com:2375')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,23 +65,24 @@
       "        }\n",
       "    ]\n",
       "}\n",
-      "{'host': 'http://csparql.westeurope.cloudapp.azure.com', 'port': 8182}\n",
+      "{'port': 8182, 'host': 'http://csparql.westeurope.cloudapp.azure.com'}\n",
       "8182\n",
-      "Registering stream: AarhusTrafficData158505\n",
-      "Registering stream: AarhusTrafficData182955\n",
-      "Registering query Q2 1 times.\n",
-      "Query Q2 succesfully registered\n",
-      "Registering observers for Q2 : observer3\n",
-      "{'@id': 'observer3', '@context': {'sld': 'http://streamreasoning.org/ontologies/SLD4TripleWave#', 'generatedAt': {'@id': 'http://www.w3.org/ns/prov#generatedAtTime', '@type': 'http://www.w3.org/2001/XMLSchema#dateTime'}}, 'sld:streamLocation': 'ws://csparql.westeurope.cloudapp.azure.com:9101/Q2/results', '@type': 'sld:sGraph'}\n",
-      "END\n"
+      "Registering dataset: AarhusTrafficData158505\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'streams' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-15fba5982f72>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mexperiment\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'streams'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Registering dataset: \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m         \u001b[0mstreams\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrsp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mregister_dataset\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'location'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'serialization'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'default'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'streams' is not defined"
      ]
     }
    ],
    "source": [
-    "import docker, json, os\n",
-    "import urllib.request\n",
-    "from RSPClient import RSPClient\n",
-    "\n",
     "tobserve = []\n",
     "rsp = None\n",
     "experiment_execution={}\n",
@@ -83,13 +99,11 @@
     "print(experiment['engine'])\n",
     "print(experiment['engine']['port'])\n",
     "\n",
-    "client = docker.DockerClient(base_url='http://rspcollector.westeurope.cloudapp.azure.com:2375')\n",
-    "\n",
     "rsp = RSPClient(experiment['engine']['host'], experiment['engine']['port'])\n",
     "\n",
     "experiment_execution['Experiment'] = experiment\n",
     "experiment_execution['E'] = rsp.engine()\n",
-    "experiment_execution['D'] = experiment['static']\n",
+    "experiment_execution['D'] = None\n",
     "experiment_execution['S'] = None\n",
     "experiment_execution['Q'] = []\n",
     "experiment_execution['K'] = None # save the KPIs\n",
@@ -97,6 +111,13 @@
     "\n",
     "root = experiment_execution['E']['runUUID']\n",
     "\n",
+    "\n",
+    "datasets=[]\n",
+    "for d in experiment['datasets']:\n",
+    "    \tprint(\"Registering dataset: \" + str(d['name']))\n",
+    "    \tdatasets.append(rsp.register_dataset( d['name'], d['location'], d['serialization'],d['default']))\n",
+    "\n",
+    "        \n",
     "streams=[]\n",
     "for s in experiment['streams']:\n",
     "    \tprint(\"Registering stream: \" + str(s['name']))\n",
@@ -175,25 +196,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "observer3_collector\n",
+      "AltairTutorial\t\t\t  __pycache__\r\n",
+      "cli.py\t\t\t\t  query.py\r\n",
+      "experiment.json\t\t\t  QueryTest.ipynb\r\n",
+      "ExperimentRegistrationTest.ipynb  RSPClient.py\r\n",
+      "NotebookRSPLab.ipynb\t\t  StreamSpawner.ipynb\r\n",
+      "NotebookRSPLab.ipynb.orig\t  test.py\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "notebook\n",
-      "sooome-minergate-cli\n"
+      "grafana\n"
      ]
     }
    ],
