Cleaned notebooks in repository

--- a/Notebooks/StreamSpawner.ipynb
+++ b/Notebooks/StreamSpawner.ipynb
@@ -4,39 +4,145 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Architecture': 'x86_64',\n",
+       " 'BridgeNfIp6tables': True,\n",
+       " 'BridgeNfIptables': True,\n",
+       " 'CPUSet': True,\n",
+       " 'CPUShares': True,\n",
+       " 'CgroupDriver': 'cgroupfs',\n",
+       " 'ClusterAdvertise': '',\n",
+       " 'ClusterStore': '',\n",
+       " 'ContainerdCommit': {'Expected': '977c511eda0925a723debdc94d09459af49d082a',\n",
+       "  'ID': '977c511eda0925a723debdc94d09459af49d082a'},\n",
+       " 'Containers': 0,\n",
+       " 'ContainersPaused': 0,\n",
+       " 'ContainersRunning': 0,\n",
+       " 'ContainersStopped': 0,\n",
+       " 'CpuCfsPeriod': True,\n",
+       " 'CpuCfsQuota': True,\n",
+       " 'Debug': False,\n",
+       " 'DefaultRuntime': 'runc',\n",
+       " 'DockerRootDir': '/var/lib/docker',\n",
+       " 'Driver': 'aufs',\n",
+       " 'DriverStatus': [['Root Dir', '/var/lib/docker/aufs'],\n",
+       "  ['Backing Filesystem', 'extfs'],\n",
+       "  ['Dirs', '16'],\n",
+       "  ['Dirperm1 Supported', 'true']],\n",
+       " 'ExperimentalBuild': False,\n",
+       " 'HttpProxy': '',\n",
+       " 'HttpsProxy': '',\n",
+       " 'ID': 'BTKG:63Q2:3OWN:YSF4:LO67:CBG7:RKCW:6ZRG:VX6S:KHVT:R643:EL5R',\n",
+       " 'IPv4Forwarding': True,\n",
+       " 'Images': 2,\n",
+       " 'IndexServerAddress': 'https://index.docker.io/v1/',\n",
+       " 'InitBinary': 'docker-init',\n",
+       " 'InitCommit': {'Expected': '949e6fa', 'ID': '949e6fa'},\n",
+       " 'Isolation': '',\n",
+       " 'KernelMemory': True,\n",
+       " 'KernelVersion': '4.4.0-66-generic',\n",
+       " 'Labels': None,\n",
+       " 'LiveRestoreEnabled': False,\n",
+       " 'LoggingDriver': 'json-file',\n",
+       " 'MemTotal': 3606245376,\n",
+       " 'MemoryLimit': True,\n",
+       " 'NCPU': 1,\n",
+       " 'NEventsListener': 0,\n",
+       " 'NFd': 15,\n",
+       " 'NGoroutines': 23,\n",
+       " 'Name': 'cqels',\n",
+       " 'NoProxy': '',\n",
+       " 'OSType': 'linux',\n",
+       " 'OomKillDisable': True,\n",
+       " 'OperatingSystem': 'Ubuntu 16.04.2 LTS',\n",
+       " 'Plugins': {'Authorization': None,\n",
+       "  'Network': ['bridge', 'host', 'macvlan', 'null', 'overlay'],\n",
+       "  'Volume': ['local']},\n",
+       " 'RegistryConfig': {'IndexConfigs': {'docker.io': {'Mirrors': None,\n",
+       "    'Name': 'docker.io',\n",
+       "    'Official': True,\n",
+       "    'Secure': True}},\n",
+       "  'InsecureRegistryCIDRs': ['127.0.0.0/8'],\n",
+       "  'Mirrors': []},\n",
+       " 'RuncCommit': {'Expected': 'a01dafd48bc1c7cc12bdb01206f9fea7dd6feb70',\n",
+       "  'ID': 'a01dafd48bc1c7cc12bdb01206f9fea7dd6feb70'},\n",
+       " 'Runtimes': {'runc': {'path': 'docker-runc'}},\n",
+       " 'SecurityOptions': ['name=apparmor', 'name=seccomp,profile=default'],\n",
+       " 'ServerVersion': '17.03.0-ce',\n",
+       " 'SwapLimit': False,\n",
+       " 'Swarm': {'Cluster': {'CreatedAt': '0001-01-01T00:00:00Z',\n",
+       "   'ID': '',\n",
+       "   'Spec': {'CAConfig': {},\n",
+       "    'Dispatcher': {},\n",
+       "    'EncryptionConfig': {'AutoLockManagers': False},\n",
+       "    'Orchestration': {},\n",
+       "    'Raft': {'ElectionTick': 0, 'HeartbeatTick': 0},\n",
+       "    'TaskDefaults': {}},\n",
+       "   'UpdatedAt': '0001-01-01T00:00:00Z',\n",
+       "   'Version': {}},\n",
+       "  'ControlAvailable': False,\n",
+       "  'Error': '',\n",
+       "  'LocalNodeState': 'inactive',\n",
+       "  'Managers': 0,\n",
+       "  'NodeAddr': '',\n",
+       "  'NodeID': '',\n",
+       "  'Nodes': 0,\n",
+       "  'RemoteManagers': None},\n",
+       " 'SystemStatus': None,\n",
+       " 'SystemTime': '2017-05-01T15:08:59.670051341Z'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import docker, json, os\n",
     "import urllib.request\n",
     "import requests\n",
     "import rsplib as rsp\n",
     "\n",
-    "client = docker.DockerClient(base_url='http://triplewave1.westeurope.cloudapp.azure.com:2375')"
+    "client = docker.DockerClient(base_url='http://cqels.westeurope.cloudapp.azure.com')\n",
+    "client.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "client = docker.DockerClient(base_url='http://rspcollector.westeurope.cloudapp.azure.com:2375')\n",
+    "client.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Image: 'ubuntu:latest'>\n",
-      "<Image: 'streamreasoning/twcitybench:latest'>\n",
-      "<Image: 'streamreasoning/triplewave:rsplab'>\n",
-      "<Image: 'postgres:latest'>\n",
-      "<Image: 'openjdk:8'>\n",
-      "<Image: 'google/cadvisor:v0.24.0'>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "b'I0428 12:05:52.658815       1 storagedriver.go:48] Using backend storage type \"influxdb\"\\nI0428 12:05:52.660883       1 storagedriver.go:50] Caching stats in memory for 2m0s\\nI0428 12:05:52.661052       1 manager.go:140] cAdvisor running in container: \"/docker/c2ca7fe54512e9064a8f7fd22f32f03197a1da7659547d37eae6797d06a0bc59\"\\nW0428 12:05:52.679025       1 manager.go:148] unable to connect to Rkt api service: rkt: cannot tcp Dial rkt api service: dial tcp [::1]:15441: getsockopt: connection refused\\nI0428 12:05:52.698510       1 fs.go:116] Filesystem partitions: map[/dev/sda1:{mountpoint:/var/lib/docker/aufs major:8 minor:1 fsType:ext4 blockSize:0} /dev/sdb1:{mountpoint:/rootfs/mnt major:8 minor:17 fsType:ext4 blockSize:0}]\\nI0428 12:05:52.702053       1 manager.go:195] Machine: {NumCores:1 CpuFrequency:2394436 MemoryCapacity:3606245376 MachineID:86f3bc9d7a914275844983f81b998621 SystemUUID:9FF005C3-0B6F-314D-B3BB-F76FE61AE119 BootID:fdf62ed3-f99e-48a9-aa52-2ee215337676 Filesystems:[{Device:/dev/sda1 Capacity:31158935552 Type:vfs Inodes:3840000 HasInodes:true} {Device:/dev/sdb1 Capacity:7262887936 Type:vfs Inodes:458752 HasInodes:true} {Device:none Capacity:31158935552 Type:vfs Inodes:3840000 HasInodes:true}] DiskMap:map[2:0:{Name:fd0 Major:2 Minor:0 Size:4096 Scheduler:deadline} 8:0:{Name:sda Major:8 Minor:0 Size:32212254720 Scheduler:deadline} 8:16:{Name:sdb Major:8 Minor:16 Size:7516192768 Scheduler:deadline}] NetworkDevices:[{Name:eth0 MacAddress:00:0d:3a:27:a9:04 Speed:10000 Mtu:1500}] Topology:[{Id:0 Memory:3606245376 Cores:[{Id:0 Threads:[0] Caches:[{Size:32768 Type:Data Level:1} {Size:32768 Type:Instruction Level:1} {Size:262144 Type:Unified Level:2}]}] Caches:[{Size:31457280 Type:Unified Level:3}]}] CloudProvider:Azure InstanceType:Unknown InstanceID:9FF005C3-0B6F-314D-B3BB-F76FE61AE119}\\nI0428 12:05:52.708822       1 manager.go:201] Version: {KernelVersion:4.4.0-66-generic ContainerOsVersion:Alpine Linux v3.4 DockerVersion:17.03.0-ce CadvisorVersion:v0.24.0 CadvisorRevision:0cdf491}\\nI0428 12:05:52.720870       1 factory.go:295] Registering Docker factory\\nW0428 12:05:52.720886       1 manager.go:244] Registration of the rkt container factory failed: unable to communicate with Rkt api service: rkt: cannot tcp Dial rkt api service: dial tcp [::1]:15441: getsockopt: connection refused\\nI0428 12:05:52.720890       1 factory.go:54] Registering systemd factory\\nI0428 12:05:52.721031       1 factory.go:86] Registering Raw factory\\nI0428 12:05:52.721164       1 manager.go:1082] Started watching for new ooms in manager\\nW0428 12:05:52.721313       1 manager.go:272] Could not configure a source for OOM detection, disabling OOM events: unable to find any kernel log file available from our set: [/var/log/kern.log /var/log/messages /var/log/syslog]\\nI0428 12:05:52.721791       1 manager.go:285] Starting recovery of all containers\\nI0428 12:05:53.016771       1 manager.go:290] Recovery completed\\nI0428 12:05:53.238843       1 cadvisor.go:157] Starting cAdvisor version: v0.24.0-0cdf491 on port 8080\\n'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in client.images.list():\n",
-    "    print(i)\n",
-    "    \n",
-    "\n"
+    "\n",
+    "\n",
+    "cadvisor = client.containers.list()[0]\n",
+    "cadvisor.logs()\n"
    ]
   },
   {
