--- a/Notebooks/experiment_creator.ipynb
+++ b/Notebooks/experiment_creator.ipynb
@@ -25,7 +25,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uninstalling rsplib-0.2.1:\r\n",
+      "  /opt/conda/lib/python3.5/site-packages/rsplib-0.2.1.dist-info/DESCRIPTION.rst\r\n",
+      "  /opt/conda/lib/python3.5/site-packages/rsplib-0.2.1.dist-info/INSTALLER\r\n",
+      "  /opt/conda/lib/python3.5/site-packages/rsplib-0.2.1.dist-info/METADATA\r\n",
+      "  /opt/conda/lib/python3.5/site-packages/rsplib-0.2.1.dist-info/RECORD\r\n",
+      "  /opt/conda/lib/python3.5/site-packages/rsplib-0.2.1.dist-info/WHEEL\r\n",
+      "  /opt/conda/lib/python3.5/site-packages/rsplib-0.2.1.dist-info/metadata.json\r\n",
+      "  /opt/conda/lib/python3.5/site-packages/rsplib-0.2.1.dist-info/top_level.txt\r\n",
+      "  /opt/conda/lib/python3.5/site-packages/rsplib/__init__.py\r\n",
+      "  /opt/conda/lib/python3.5/site-packages/rsplib/__pycache__/__init__.cpython-35.pyc\r\n",
+      "Proceed (y/n)? "
+     ]
+    }
+   ],
+   "source": [
+    "!pip uninstall rsplib -y1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,17 +61,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rsplib.processing import execute, deploy"
+    "from rsplib.experiments.workflow import execute, deploy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from rsplib.processing.consumer.query import *"
@@ -52,16 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<rsplib.experiments.Experiment at 0x7f4e0971c860>"
+       "<rsplib.experiments.Experiment at 0x7f598dbe2588>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,17 +98,17 @@
    "source": [
     "# CITYBENCH CSPARQL EXPERIMENT 1\n",
     "e = Experiment()\n",
-    "repetition=10\n",
+    "\n",
     "qname = \"Q1\"\n",
     "experimentName = \"/experiment1.json\"\n",
-    "\n",
+    "e.set_duration(5,\"minutes\")\n",
     "e.add_engine('http://csparql.westeurope.cloudapp.azure.com', 80, Dialects.CSPARQL)\n",
     "\n",
     "q = e.add_query(qname, \"query\", Dialects.CSPARQL)\n",
     "q.set_select_clause(\"?obId1 ?obId2 ?v1 ?v2\")\n",
     "q.set_where_clause(\"{?p1   a <http://www.insight-centre.org/citytraffic#CongestionLevel>.?p2   a <http://www.insight-centre.org/citytraffic#CongestionLevel>. {?obId1 <http://purl.oclc.org/NET/ssnx/ssn#observedProperty> ?p1.?obId1 <http://purl.oclc.org/NET/sao/hasValue> ?v1.?obId1 <http://purl.oclc.org/NET/ssnx/ssn#observedBy> <http://www.insight-centre.org/dataset/SampleEventService#AarhusTrafficData182955>.}{?obId2 <http://purl.oclc.org/NET/ssnx/ssn#observedProperty> ?p2.?obId2 <http://purl.oclc.org/NET/sao/hasValue> ?v2.?obId2 <http://purl.oclc.org/NET/ssnx/ssn#observedBy> <http://www.insight-centre.org/dataset/SampleEventService#AarhusTrafficData158505>.}}\")\n",
     "e.add_windowed_stream(qname,\"AarhusTrafficData182955\", \"http://triplewave1.westeurope.cloudapp.azure.com:4000/sgraph\", '3s','1s' )\n",
-    "e.add_windowed_stream(qname,\"AarhusTrafficData158505\", \"http://triplewave1.westeurope.cloudapp.azure.com:4000/sgraph\", '3s','1s' )\n",
+    "e.add_windowed_stream(qname,\"AarhusTrafficData158505\", \"http://triplewave1.westeurope.cloudapp.azure.com:4001/sgraph\", '3s','1s' )\n",
     "\n",
     "e.add_graph(qname, \"SensorRepository\", \"https://rsplab.blob.core.windows.net/static/SensorRepository.rdf\", serialization=\"RDF/XML\", default='true')\n",
     "#e.add_graph(qname, \"AarhusLibraryEvents\", \"https://rsplab.blob.core.windows.net/static/AarhusLibraryEvents.rdf\", serialization=\"RDF/XML\", default='true')\n",
@@ -548,7 +577,7 @@
     "repetition=10\n",
     "qname = \"Q12\"\n",
     "experimentName = \"/experiment12.json\"\n",
-    "e.set_duration(2,\"minutes\")\n",
+    "e.set_duration(5,\"minutes\")\n",
     "e.add_engine('http://csparql.westeurope.cloudapp.azure.com', 80, Dialects.CSPARQL)\n",
     "\n",
     "q = e.add_query(qname, \"query\", Dialects.CSPARQL)\n",
@@ -618,31 +647,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"name\":\"csparql\",\"host\":\"csparql/\",\"runUUID\":\"85b3ef52-3435-11e7-8ce9-000d3a27a904\",\"port\":8182,\"empty_results\":false,\"inference\":false,\"timestam_function\":false,\"backloop\":true,\"num_streams\":1,\"num_datasets\":1,\"num_queries\":1}\n",
-      "Registering static sources: https://rsplab.blob.core.windows.net/static/SensorRepository.rdf\n",
-      "\"Dataset SensorRepository succesfully registered with IRI https://rsplab.blob.core.windows.net/static/SensorRepository.rdf\"\n",
-      "Registering stream: AarhusTrafficData186979\n",
-      "\"AarhusTrafficData186979 already exists\"\n",
-      "Registering query Q12 \n",
-      "{'queryBody': 'REGISTER QUERY Q12 AS SELECT  (count(?obId1) as ?obCnt)   FROM STREAM <AarhusTrafficData186979> [RANGE 3s STEP 1s]\\nWHERE { {?p1   a <http://www.insight-centre.org/citytraffic#CongestionLevel>.{?obId1 a ?ob.?obId1 <http://purl.oclc.org/NET/ssnx/ssn#observedProperty> ?p1.?obId1 <http://purl.oclc.org/NET/sao/hasValue> ?v1.?obId1 <http://purl.oclc.org/NET/ssnx/ssn#observedBy> ?service1.}Filter(?v1 >= -1)}\\n}'}\n",
-      "\"Query with same name already exists\"\n",
-      "Query with same name already exists\n",
-      "Registering observers for Q12\n",
-      "\"http://csparql.westeurope.cloudapp.azure.com/queries/Q12/observers/default\"\n",
-      "{ \"@context\": {\"sld\":\"http://streamreasoning.org/ontologies/SLD4TripleWave#\",\"generatedAt\": {\"@id\":\"http://www.w3.org/ns/prov#generatedAtTime\",\"@type\":\"http://www.w3.org/2001/XMLSchema#dateTime\"}},\"@id\": \"default\",\"@type\": \"sld:sGraph\",\"sld:streamLocation\": \"ws://csparql.westeurope.cloudapp.azure.com:9101/Q12/results\"}\n",
-      "[{\"id\":\"Q12\",\"type\":\"QUERY\",\"status\":\"RUNNING\"}]\n"
+     "ename": "NameError",
+     "evalue": "name 'deploy' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-f18707373ea3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdeploy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'deploy' is not defined"
      ]
     }
    ],
    "source": [
     "ex = deploy(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<rsplib.experiments.Experiment at 0x7f598dbe2588>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e"
    ]
   },
   {
